deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: a-service
  namespace: a-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: a-service
