deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: a-service 
spec:
  host: a-service.apps.aws-jb-1.dev05.red-chesterfield.com 
  port:
    targetPort: 8080
  to:
    kind: Service
    name: a-service
